--- a/plugins/core/src/main/resources/META-INF/plugin.xml
+++ b/plugins/core/src/main/resources/META-INF/plugin.xml
@@ -22,5 +22,6 @@
         <!-- each plugin needs its own instance of these -->
         <applicationService serviceImplementation="migration.software.aws.toolkits.jetbrains.core.coroutines.PluginCoroutineScopeTracker"/>
         <projectService serviceImplementation="migration.software.aws.toolkits.jetbrains.core.coroutines.PluginCoroutineScopeTracker"/>
+        <postStartupActivity implementation="software.aws.toolkits.jetbrains.services.telemetry.OpenedFileTypesMetrics" />
     </extensions>
 </idea-plugin>
