fix version update logistic and q-intellij conflict options

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 # Toolkit Version
-toolkitVersion=3.29-SNAPSHOT
+toolkitVersion=99.99.3
 
 # Publish Settings
 publishToken=
