--- a/plugins/core/src/main/resources/META-INF/plugin.xml
+++ b/plugins/core/src/main/resources/META-INF/plugin.xml
@@ -22,6 +22,9 @@
         <!-- each plugin needs its own instance of these -->
         <applicationService serviceImplementation="migration.software.aws.toolkits.jetbrains.core.coroutines.PluginCoroutineScopeTracker"/>
         <projectService serviceImplementation="migration.software.aws.toolkits.jetbrains.core.coroutines.PluginCoroutineScopeTracker"/>
-        <postStartupActivity implementation="software.aws.toolkits.jetbrains.services.telemetry.OpenedFileTypesMetrics" />
+        <!--postStartupActivity implementation="software.aws.toolkits.jetbrains.services.telemetry.OpenedFileTypesMetrics" /-->
     </extensions>
+    <projectListeners>
+        <listener class="software.aws.toolkits.jetbrains.services.telemetry.OpenedFileTypesMetricsListener" topic="com.intellij.openapi.fileEditor.FileEditorManagerListener"/>
+    </projectListeners>
 </idea-plugin>
