Add file extension type metrics (#4859)
* Add file extension type metrics

* addressed feedback 1

* added tests

* Feedback 2

* feedback

* fixed runtime disposer exception

* removed extra code

* feedback 3

* feedback 4

--- a/plugins/core/src/main/resources/META-INF/plugin.xml
+++ b/plugins/core/src/main/resources/META-INF/plugin.xml
@@ -23,4 +23,7 @@
         <applicationService serviceImplementation="migration.software.aws.toolkits.jetbrains.core.coroutines.PluginCoroutineScopeTracker"/>
         <projectService serviceImplementation="migration.software.aws.toolkits.jetbrains.core.coroutines.PluginCoroutineScopeTracker"/>
     </extensions>
+    <projectListeners>
+        <listener class="software.aws.toolkits.jetbrains.services.telemetry.OpenedFileTypesMetricsListener" topic="com.intellij.openapi.fileEditor.FileEditorManagerListener"/>
+    </projectListeners>
 </idea-plugin>
