Include `contents: read` permission in Qodana workflow
Required for private forks

--- a/.github/workflows/qodana-check.yml
+++ b/.github/workflows/qodana-check.yml
@@ -15,6 +15,7 @@ jobs:
   qodana:
     runs-on: ubuntu-latest
     permissions:
+      contents: read
       # PR check
       checks: write
       # PR comments
