--- a/plugins/amazonq/shared/jetbrains-community/resources/software/aws/toolkits/resources/AmazonQBundle.properties
+++ b/plugins/amazonq/shared/jetbrains-community/resources/software/aws/toolkits/resources/AmazonQBundle.properties
@@ -1,13 +1,11 @@
 action.q.hello.description=Hello description
-amazonqInlineChat.gutter.tooltip = Amazon Q
 amazonqInlineChat.hint.edit = Edit
-amazonqInlineChat.hint.windows.shortCut = (Ctrl + I)
-amazonqInlineChat.popup.accept=Accept
-amazonqInlineChat.popup.cancel=Cancel
-amazonqInlineChat.popup.confirm=Confirm
+amazonqInlineChat.popup.accept=Accept \u23CE
+amazonqInlineChat.popup.cancel=Cancel \u238B
+amazonqInlineChat.popup.confirm=Confirm \u23CE
 amazonqInlineChat.popup.editCode = Edit Code
 amazonqInlineChat.popup.generating = Generating...
-amazonqInlineChat.popup.reject=Reject
+amazonqInlineChat.popup.reject=Reject \u238B
 amazonqInlineChat.popup.title=Enter Instructions for Q
 amazonq.refresh.panel=Refresh Chat Session
 q.hello=Hello
