feat(amazonq): support in editor chat (#5004)

--- a/plugins/amazonq/shared/jetbrains-community/resources/software/aws/toolkits/resources/AmazonQBundle.properties
+++ b/plugins/amazonq/shared/jetbrains-community/resources/software/aws/toolkits/resources/AmazonQBundle.properties
@@ -1,3 +1,11 @@
 action.q.hello.description=Hello description
+amazonqInlineChat.hint.edit = Edit
+amazonqInlineChat.popup.accept=Accept \u23CE
+amazonqInlineChat.popup.cancel=Cancel \u238B
+amazonqInlineChat.popup.confirm=Confirm \u23CE
+amazonqInlineChat.popup.editCode = Edit Code
+amazonqInlineChat.popup.generating = Generating...
+amazonqInlineChat.popup.reject=Reject \u238B
+amazonqInlineChat.popup.title=Enter Instructions for Q
 amazonq.refresh.panel=Refresh Chat Session
 q.hello=Hello
