--- a/plugins/toolkit/jetbrains-core/resources/META-INF/plugin.xml
+++ b/plugins/toolkit/jetbrains-core/resources/META-INF/plugin.xml
@@ -624,7 +624,7 @@
 
         <group id="aws.toolkit.dynamoViewer.toolbar.secondary">
             <group popup="true" id="aws.toolkit.dynamoViewer.toolbar.settings" icon="AllIcons.General.GearPlain">
-                <action id="aws.toolkit.dynamoViewer.changeMaxResults"
+                <group id="aws.toolkit.dynamoViewer.changeMaxResults"
                         class="software.aws.toolkits.jetbrains.services.dynamodb.editor.actions.ConfigureMaxResultsAction"/>
             </group>
         </group>
