--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -9,6 +9,9 @@ on:
   push:
     branches: [ main, feature/* ]
 
+concurrency:
+  group: ${{ github.workflow }}${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
 
 jobs:
   generate_artifact_toolkit_standalone:
