--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ kotlin.code.style=official
 # Gradle settings
 org.gradle.parallel=true
 org.gradle.caching=true
+org.gradle.configuration-cache=true
 org.gradle.configuration-cache.parallel=true
 org.gradle.jvmargs=-Xmx2048m
 kotlin.daemon.jvmargs=-Xmx2048m
