--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,7 @@ org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configuration-cache=true
 org.gradle.configuration-cache.parallel=true
+org.gradle.configuration-cache.problems=warn
 org.gradle.jvmargs=-Xmx2048m
 kotlin.daemon.jvmargs=-Xmx2048m
 
