--- a/.github/workflows/ssm-integ.yml
+++ b/.github/workflows/ssm-integ.yml
@@ -28,10 +28,10 @@ jobs:
         run: git config --system core.longpaths true
         if: ${{ matrix.os == 'windows-latest' }}
       - uses: actions/checkout@v2
-      - name: Set up JDK 17
-        uses: actions/setup-java@v1
+      - uses: actions/setup-java@v4
         with:
-          java-version: 17
+          distribution: 'corretto'
+          java-version: '21'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
