--- a/plugins/amazonq/shared/jetbrains-community/resources/software/aws/toolkits/resources/AmazonQBundle.properties
+++ b/plugins/amazonq/shared/jetbrains-community/resources/software/aws/toolkits/resources/AmazonQBundle.properties
@@ -1,4 +1,6 @@
 action.q.hello.description=Hello description
+amazonq.brand.title=Amazon Q
+amazonq.chat.workspacecontext.enable.message=Workspace index is now enabled. You can disable it in the Amazon Q settings.
 amazonqInlineChat.hint.edit = Edit
 amazonqInlineChat.popup.accept=Accept \u23CE
 amazonqInlineChat.popup.cancel=Cancel \u238B
