--- a/plugins/amazonq/shared/jetbrains-community/resources/software/aws/toolkits/resources/AmazonQBundle.properties
+++ b/plugins/amazonq/shared/jetbrains-community/resources/software/aws/toolkits/resources/AmazonQBundle.properties
@@ -8,4 +8,6 @@ amazonqInlineChat.popup.generating = Generating...
 amazonqInlineChat.popup.reject=Reject \u238B
 amazonqInlineChat.popup.title=Enter Instructions for Q
 amazonq.refresh.panel=Refresh Chat Session
+amazonq.title=Amazon Q
+amazonq.workspace.settings.open.prompt=Workspace index is now enabled. You can disable it from Amazon Q settings.
 q.hello=Hello
