--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -8,15 +8,18 @@ on:
         default: prerelease
   push:
     branches: [ main, feature/* ]
+  pull_request:
+    branches: [ '**' ]
 
 concurrency:
   group: ${{ github.workflow }}${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
-  generate_artifact_toolkit_standalone:
+  generate_artifact:
     strategy:
       matrix:
+        build_target: [ ':plugin-core:buildPlugin', ':plugin-toolkit:intellij-standalone:buildPlugin', ':plugin-amazonq:buildPlugin' ]
         supported_versions: [ '2024.1', '2024.2', '2024.3', '2025.1' ]
     runs-on: ubuntu-latest
     steps:
@@ -38,71 +41,12 @@ jobs:
           dotnet-version: '6.x'
       - name: Generate artifact
         run: |
-          ./gradlew -PideProfileName=${{ matrix.supported_versions }} :plugin-toolkit:intellij-standalone:buildPlugin
+          ./gradlew -PideProfileName=${{ matrix.supported_versions }} ${{ matrix.build_target }}
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: plugin-standalone-${{ matrix.supported_versions }}
-          path: ./plugins/toolkit/intellij-standalone/build/distributions/*.zip
-          retention-days: 1
-
-  generate_artifact_q:
-    strategy:
-      matrix:
-        supported_versions: [ '2024.1', '2024.2', '2024.3' ]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: remove unwanted dependencies
-        run: |
-          sudo rm -rf /usr/share/dotnet
-          sudo rm -rf /opt/ghc
-          sudo rm -rf "/usr/local/share/boost"
-          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
-      - uses: actions/setup-java@v4
-        with:
-          distribution: 'corretto'
-          java-version: '21'
-      - name: Generate artifact
-        run: |
-          ./gradlew -PideProfileName=${{ matrix.supported_versions }} :plugin-amazonq:buildPlugin
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: plugin-amazonq-${{ matrix.supported_versions }}
-          path: ./plugins/amazonq/build/distributions/*.zip
-          retention-days: 1
-
-  generate_artifact_core:
-    strategy:
-      matrix:
-        supported_versions: [ '2024.1', '2024.2', '2024.3' ]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: remove unwanted dependencies
-        run: |
-          sudo rm -rf /usr/share/dotnet
-          sudo rm -rf /opt/ghc
-          sudo rm -rf "/usr/local/share/boost"
-          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
-      - uses: actions/setup-java@v4
-        with:
-          distribution: 'corretto'
-          java-version: '21'
-
-      - name: Generate artifact
-        run: |
-          ./gradlew -PideProfileName=${{ matrix.supported_versions }} :plugin-core:buildPlugin
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: plugin-core-${{ matrix.supported_versions }}
-          path: ./plugins/core/build/distributions/*.zip
+          name: plugin-${{ matrix.build_target }}-${{ matrix.supported_versions }}
+          path: ./plugins/**/build/distributions/*.zip
           retention-days: 1
 
   generate_changelog:
@@ -148,7 +92,7 @@ jobs:
           echo 'EOF' >> $GITHUB_OUTPUT
 
   publish:
-    needs: [  generate_artifact_toolkit_standalone, generate_artifact_core, generate_artifact_q, generate_changelog ]
+    needs: [  generate_artifact, generate_changelog ]
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       GH_REPO: ${{ github.repository }}
