--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -121,13 +121,7 @@ jobs:
       - name: Publish to GitHub Releases
         run: |
           envsubst < "$GITHUB_WORKSPACE/.github/workflows/prerelease_notes.md" > "$RUNNER_TEMP/prerelease_notes.md"
-          gh release create "$TAG_NAME" --prerelease --notes-file "$RUNNER_TEMP/prerelease_notes.md" --title "$SUBJECT" --target $GITHUB_SHA plugin-standalone-*/*.zip
-      - name: Publish core
-        run: |
-          gh release upload "$TAG_NAME" plugin-core-*/*.zip
-      - name: Publish Q
-        run: |
-          gh release upload "$TAG_NAME" plugin-amazonq-*/*.zip
+          gh release create "$TAG_NAME" --prerelease --notes-file "$RUNNER_TEMP/prerelease_notes.md" --title "$SUBJECT" --target $GITHUB_SHA *.zip
       - name: Publish XML manifest
         run: |
           gh release view "$TAG_NAME" --repo "$GITHUB_REPOSITORY" --json assets | python3 "$GITHUB_WORKSPACE/.github/workflows/generateUpdatesXml.py" - > updatePlugins.xml
