--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -46,12 +46,13 @@ jobs:
         env:
           ARTIFACT_NAME: "${{ matrix.build_target }}-${{ matrix.version }}"
         run: |
+          echo "ARTIFACT_SUBPATH=$(echo $ARTIFACT_NAME | sed -e 's/^:plugin-//' -e 's/:buildPlugin$//' -e 's/:/\//')" >> $GITHUB_ENV
           echo "ARTIFACT_NAME=${ARTIFACT_NAME//:}" >> $GITHUB_ENV
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.ARTIFACT_NAME }}
-          path: ./plugins/**/build/distributions/*.zip
+          path: ./plugins/${{ env.ARTIFACT_SUBPATH }}/build/distributions/*.zip
           retention-days: 1
 
   generate_changelog:
