--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 # Toolkit Version
-toolkitVersion=3.56
+toolkitVersion=3.57-SNAPSHOT
 
 # Publish Settings
 publishToken=
