--- a/plugins/amazonq/src/main/resources/META-INF/plugin.xml
+++ b/plugins/amazonq/src/main/resources/META-INF/plugin.xml
@@ -86,7 +86,7 @@
     <extensions defaultExtensionNs="com.intellij">
         <registryKey key="amazon.q.endpoint" description="Endpoint to use for Amazon Q"
                      defaultValue="https://codewhisperer.us-east-1.amazonaws.com/" restartRequired="true"/>
-        <registryKey key="inline.completion.rem.dev.use.rhizome" description="Used for Amazon Q to displaying suggestions on remote"
+        <registryKey key="inline.completion.rem.dev.use.rhizome" description="Defined by IntelliJ. Used for Amazon Q to display suggestions on remote."
                      defaultValue="false" restartRequired="true"/>
     </extensions>
 
