--- a/buildspec/windowsTests.yml
+++ b/buildspec/windowsTests.yml
@@ -8,6 +8,15 @@ env:
 phases:
   install:
     commands:
+      # force install java21 while we work throuh path issues
+      - |
+        $url = 'https://corretto.aws/downloads/latest/amazon-corretto-17-x64-windows-jdk.msi';
+        Write-Host ('Downloading from {0}' -f $url);
+        [ Net.ServicePointManager ]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12;
+        Invoke-WebRequest -Uri $url -OutFile 'corretto_jdk_build.msi';
+        Start-Process 'corretto_jdk_build.msi' -PassThru | Wait-Process;
+        Write-Host 'Removing ...';
+        Remove-Item corretto_jdk_build.msi -Force;
       - |
         if(-Not($Env:CODE_COV_TOKEN -eq $null)) {
             [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12;
