--- a/buildspec/windowsTests.yml
+++ b/buildspec/windowsTests.yml
@@ -10,16 +10,8 @@ phases:
     commands:
       # force install java21 while we work throuh path issues
       - |
-        $url = 'https://corretto.aws/downloads/latest/amazon-corretto-21-x64-windows-jdk.msi';
-        Write-Host ('Downloading from {0}' -f $url);
-        [ Net.ServicePointManager ]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12;
-        Invoke-WebRequest -Uri $url -OutFile 'corretto_jdk_build.msi';
-        Start-Process 'corretto_jdk_build.msi' -PassThru | Wait-Process;
-        Write-Host 'Removing ...';
-        Remove-Item corretto_jdk_build.msi -Force;
-      - |
         $javaName = "C:\Program Files\Amazon Corretto" | ForEach-Object {
-          ls $_ | Sort-Object -Descending -Property Name | Select-Object -first 1 -expandproperty Name
+          ls $_ | Where-Object {$_ -Like "jdk*"} | Sort-Object -Descending -Property Name | Select-Object -first 1 -expandproperty Name
         }
         $JAVA_HOME = "C:\Program Files\Amazon Corretto\$javaName"
       - |
