--- a/buildspec/linuxUiTests.yml
+++ b/buildspec/linuxUiTests.yml
@@ -46,6 +46,17 @@ phases:
         
       - chmod +x gradlew
 
+      - |
+        >/etc/apparmor.d/jcef
+        abi <abi/4.0>,
+          include <tunables/global>
+          
+          profile /usr/lib/jvm/java-21-amazon-corretto.x86_64/bin/java flags=(unconfined) {
+          userns,
+        
+          include if exists <local/chrome>
+        }
+      - apparmor_parser -r /etc/apparmor.d/jcef
       - ffmpeg -loglevel quiet -nostdin -f x11grab -video_size ${SCREEN_WIDTH}x${SCREEN_HEIGHT} -i ${DISPLAY} -codec:v libx264 -pix_fmt yuv420p -vf drawtext="fontsize=48:box=1:boxcolor=black@0.75:boxborderw=5:fontcolor=white:x=0:y=h-text_h:text='%{gmtime\:%H\\\\\:%M\\\\\:%S}'" -framerate 12 -g 12 /tmp/screen_recording.mp4 &
       - ./gradlew -PideProfileName=$ALTERNATIVE_IDE_PROFILE_NAME :ui-tests-starter:uiTest coverageReport --console plain --info
 
