--- a/buildspec/linuxUiTests.yml
+++ b/buildspec/linuxUiTests.yml
@@ -47,7 +47,7 @@ phases:
       - chmod +x gradlew
 
       - |
-        >/etc/apparmor.d/jcef
+        >/etc/apparmor.d/jcef echo "
         abi <abi/4.0>,
           include <tunables/global>
           
@@ -55,7 +55,7 @@ phases:
           userns,
         
           include if exists <local/chrome>
-        }
+        }"
       - apparmor_parser -r /etc/apparmor.d/jcef
       - ffmpeg -loglevel quiet -nostdin -f x11grab -video_size ${SCREEN_WIDTH}x${SCREEN_HEIGHT} -i ${DISPLAY} -codec:v libx264 -pix_fmt yuv420p -vf drawtext="fontsize=48:box=1:boxcolor=black@0.75:boxborderw=5:fontcolor=white:x=0:y=h-text_h:text='%{gmtime\:%H\\\\\:%M\\\\\:%S}'" -framerate 12 -g 12 /tmp/screen_recording.mp4 &
       - ./gradlew -PideProfileName=$ALTERNATIVE_IDE_PROFILE_NAME :ui-tests-starter:uiTest coverageReport --console plain --info
