--- a/buildspec/linuxUiTests.yml
+++ b/buildspec/linuxUiTests.yml
@@ -45,19 +45,7 @@ phases:
         credential_source=EcsContainer"
         
       - chmod +x gradlew
-      - mkdir -p /etc/apparmor.d
-      - touch /etc/apparmor.d/jcef
-      - |
-        >/etc/apparmor.d/jcef echo "
-        abi <abi/4.0>,
-          include <tunables/global>
-          
-          profile /usr/lib/jvm/java-21-amazon-corretto.x86_64/bin/java flags=(unconfined) {
-          userns,
-        
-          include if exists <local/chrome>
-        }"
-      - sudo apparmor_parser -r /etc/apparmor.d/jcef
+      - sysctl -w kernel.unprivileged_userns_clone=1
       - ffmpeg -loglevel quiet -nostdin -f x11grab -video_size ${SCREEN_WIDTH}x${SCREEN_HEIGHT} -i ${DISPLAY} -codec:v libx264 -pix_fmt yuv420p -vf drawtext="fontsize=48:box=1:boxcolor=black@0.75:boxborderw=5:fontcolor=white:x=0:y=h-text_h:text='%{gmtime\:%H\\\\\:%M\\\\\:%S}'" -framerate 12 -g 12 /tmp/screen_recording.mp4 &
       - ./gradlew -PideProfileName=$ALTERNATIVE_IDE_PROFILE_NAME :ui-tests-starter:uiTest coverageReport --console plain --info
 
