--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 # Toolkit Version
-toolkitVersion=3.58-SNAPSHOT-ASBX_TEST_0228
+toolkitVersion=3.58-SNAPSHOT
 
 # Publish Settings
 publishToken=
