remove gradle settings file for q doc update flow test repo

--- a/ui-tests-starter/tstData/qdoc/updateFlow/build.gradle
+++ b/ui-tests-starter/tstData/qdoc/updateFlow/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'java'
 }
 
-group = 'com.example'
+group = 'com.zetcode.tancode'
 version = '1.0-SNAPSHOT'
 sourceCompatibility = '17'
 
