--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 # Toolkit Version
-toolkitVersion=3.59-SNAPSHOT
+toolkitVersion=3.59-SNAPSHOT-ASBX_TEST
 
 # Publish Settings
 publishToken=
